tests/integration/auth/snapshots/main__integration__auth__client_credentials__apollo_key_takes_precedence_over_client_credentials.snap
---
source: tests/integration/auth/client_credentials.rs
expression: stdout
---
{
  "json_version": "1",
  "data": {
    "key_type": "User",
    "graph_id": null,
    "graph_title": null,
    "user_id": "a-user-id",
    "origin": "$APOLLO_KEY",
    "api_key": "an-a********-key",
    "success": true
  },
  "error": null
}
