tests/integration/auth/snapshots/main__integration__auth__client_credentials__client_credentials_are_exchanged_and_used_as_the_api_key.snap
---
source: tests/integration/auth/client_credentials.rs
expression: stdout
---
{
  "json_version": "1",
  "data": {
    "key_type": "User",
    "graph_id": null,
    "graph_title": null,
    "user_id": "a-user-id",
    "origin": "$APOLLO_CLIENT_ID",
    "api_key": "exch********oken",
    "success": true
  },
  "error": null
}
